chore: add more i18n

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -19,14 +19,20 @@
     "grid": "Grid Layout",
     "axis": "Axes",
     "legend": "Legend",
-  "legendPosition": "Legend Position",
+    "legendPosition": "Legend Position",
     "toolbox": "Toolbox",
-    "download": "Download Theme",
-    "import": "Import Config",
-    "export": "Export Config",
-    "themeName": "Theme Name",
+    "tooltip": "Tooltip",
+    "timeline": "Timeline",
+    "lineChart": "Line Chart",
+    "graph": "Graph",
+    "map": "Map",
+    "kline": "Candlestick Chart",
+    "download": "Download",
+    "import": "Import",
+    "export": "Export",
+    "themeName": "Name",
     "themePlaceholder": "Please enter theme name",
-    "seriesCount": "Series Count",
+    "seriesCount": "Series",
     "seriesPlaceholder": "Please enter series count",
     "preDefinedThemes": "Predefined Themes",
     "separateAxisSetting": "Configure different axis types separately"
@@ -59,6 +65,10 @@
   },
   "grid": {
   },
+  "tooltip": {
+    "axisPointer": "Axis Pointer",
+    "axisPointerWidth": "Width"
+  },
   "axis": {
     "categoryAxis": "Category Axis",
     "valueAxis": "Value Axis",
@@ -74,19 +84,88 @@
     "en": "English",
     "zh": "中文"
   },
+  "timeline": {
+    "item": "Marker",
+    "itemHover": "Marker Hover",
+    "itemSelected": "Marker Selected",
+    "itemSelectedBorder": "Selected Marker Border",
+    "itemBorderWidth": "Marker Border Width",
+    "mainAxis": "Main Axis",
+    "mainAxisWidth": "Main Axis Width",
+    "controlFill": "Control Fill",
+    "controlBorder": "Control Border",
+    "controlBorderWidth": "Control Border Width",
+    "label": "Label"
+  },
+  "lineChart": {
+    "smooth": "Smooth Curve",
+    "lineWidth": "Line Width",
+    "symbolBorder": "Symbol Border",
+    "symbolSize": "Symbol Size",
+    "symbolShape": "Symbol Shape",
+    "circle": "Circle",
+    "emptyCircle": "Empty Circle",
+    "rect": "Rectangle",
+    "emptyRect": "Empty Rectangle",
+    "roundRect": "Rounded Rectangle",
+    "emptyRoundRect": "Empty Rounded Rectangle",
+    "triangle": "Triangle",
+    "emptyTriangle": "Empty Triangle",
+    "diamond": "Diamond",
+    "emptyDiamond": "Empty Diamond",
+    "pin": "Pin",
+    "emptyPin": "Empty Pin",
+    "arrow": "Arrow",
+    "emptyArrow": "Empty Arrow"
+  },
+  "graph": {
+    "lineWidth": "Line Width",
+    "lineColor": "Line Color"
+  },
+  "map": {
+    "areaColor": "Area Color",
+    "borderColor": "Border Color",
+    "borderWidth": "Border Width",
+    "labelColor": "Label Color",
+    "areaHoverColor": "Area Hover Color",
+    "borderHoverColor": "Border Hover Color",
+    "borderHoverWidth": "Border Hover Width",
+    "labelHoverColor": "Label Hover Color"
+  },
+  "kline": {
+    "upColor": "Up Color",
+    "downColor": "Down Color",
+    "upBorderColor": "Up Border Color",
+    "downBorderColor": "Down Border Color",
+    "borderWidth": "Border Width"
+  },
   "modals": {
     "themeCodeTitle": "Theme Code",
     "importThemeTitle": "Import Theme",
     "helpTitle": "Help",
+    "helpContent": {
+      "whatIs": "What is the Theme Builder?",
+      "whatIsDesc1": "A \"theme\" is a style abstraction for ECharts charts, used to unify the style of multiple charts. Using the online theme builder, you can quickly and intuitively generate theme configuration files and use customized theme styles in ECharts.",
+      "whatIsDesc2": "Based on this theme, you can still use <code>setOption</code> to override or set theme styles.",
+      "whatIsDesc3": "ECharts officially provides themes such as <code>default</code>, <code>infographic</code>, <code>shine</code>, <code>roma</code>, <code>macarons</code>, <code>vintage</code>, etc., which can be <a href=\"http://echarts.baidu.com/download-theme.html\" target=\"_blank\">downloaded</a> for use.",
+      "importExport": "Import and Export",
+      "importExportDesc": "For convenient secondary modifications, our theme builder supports importing and exporting configuration items. The exported JSON file is only used for importing in this tool and cannot be directly registered as a theme in ECharts."
+    },
     "formatSelection": "Select Format",
     "formatSelectionMsg": "Please select a format for the theme file:",
     "jsFormat": "JavaScript File",
     "jsonFormat": "JSON File",
     "jsUsageTitle": "JavaScript Theme File Usage",
+    "jsonUsageTitle": "JSON Theme File Usage",
     "jsUsageStep1": "Save the downloaded {filename} file to your project",
+    "jsonUsageStep1": "Save the downloaded {filename} file to your project",
     "jsUsageStep2": "Include this file in your HTML:",
+    "jsonUsageStep2": "Read and parse the JSON file:",
     "jsUsageStep3": "Use the theme when creating a chart:",
+    "jsonUsageStep3": "Register the theme:",
+    "jsonUsageStep4": "Use the theme when creating a chart:",
     "jsUsageTip": "💡 The second parameter is the theme name registered in the JS file.",
+    "jsonUsageTip": "💡 The second parameter is the theme name used during registration.",
     "downloadFailed": "Download failed, please try again",
     "exportSuccess": "Configuration exported successfully!",
     "exportFailed": "Export failed, please try again",
