--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -19,8 +19,14 @@
     "grid": "Grid 布局",
     "axis": "坐标轴",
     "legend": "图例",
-  "legendPosition": "图例位置",
+    "legendPosition": "图例位置",
     "toolbox": "工具箱",
+    "tooltip": "提示框",
+    "timeline": "时间轴",
+    "lineChart": "折线图",
+    "graph": "关系图",
+    "map": "地图",
+    "kline": "K线图",
     "download": "下载主题",
     "import": "导入配置",
     "export": "导出配置",
@@ -59,6 +65,10 @@
   },
   "grid": {
   },
+  "tooltip": {
+    "axisPointer": "指示线",
+    "axisPointerWidth": "宽度"
+  },
   "axis": {
     "categoryAxis": "类目轴",
     "valueAxis": "数值轴",
@@ -74,19 +84,88 @@
     "en": "English",
     "zh": "中文"
   },
+  "timeline": {
+    "item": "标记",
+    "itemHover": "标记悬停",
+    "itemSelected": "标记选中",
+    "itemSelectedBorder": "标记选中描边",
+    "itemBorderWidth": "标记描边",
+    "mainAxis": "主轴",
+    "mainAxisWidth": "主轴宽度",
+    "controlFill": "控件填充",
+    "controlBorder": "控件描边",
+    "controlBorderWidth": "控件描边宽度",
+    "label": "文字"
+  },
+  "lineChart": {
+    "smooth": "平滑曲线",
+    "lineWidth": "线条宽度",
+    "symbolBorder": "图形描边",
+    "symbolSize": "图形大小",
+    "symbolShape": "图形形状",
+    "circle": "圆形",
+    "emptyCircle": "空心圆形",
+    "rect": "方形",
+    "emptyRect": "空心方形",
+    "roundRect": "圆角矩形",
+    "emptyRoundRect": "空心圆角矩形",
+    "triangle": "三角形",
+    "emptyTriangle": "空心三角形",
+    "diamond": "菱形",
+    "emptyDiamond": "空心菱形",
+    "pin": "水滴",
+    "emptyPin": "空心水滴",
+    "arrow": "箭头",
+    "emptyArrow": "空心箭头"
+  },
+  "graph": {
+    "lineWidth": "线条宽度",
+    "lineColor": "线条颜色"
+  },
+  "map": {
+    "areaColor": "区域颜色",
+    "borderColor": "边界颜色",
+    "borderWidth": "边界宽度",
+    "labelColor": "标签颜色",
+    "areaHoverColor": "悬停区域颜色",
+    "borderHoverColor": "悬停边界颜色",
+    "borderHoverWidth": "悬停边界宽度",
+    "labelHoverColor": "悬停标签颜色"
+  },
+  "kline": {
+    "upColor": "阳线颜色",
+    "downColor": "阴线颜色",
+    "upBorderColor": "阳线边框",
+    "downBorderColor": "阴线边框",
+    "borderWidth": "边框宽度"
+  },
   "modals": {
     "themeCodeTitle": "主题代码",
     "importThemeTitle": "导入主题",
     "helpTitle": "帮助",
+    "helpContent": {
+      "whatIs": "主题在线构建工具是什么？",
+      "whatIsDesc1": "\"主题\"是 ECharts 图表的风格抽象，用于统一多个图表的风格样式。使用主题在线构建工具，可以快速直观地生成主题配置文件，并在 ECharts 中使用自定义的主题样式。",
+      "whatIsDesc2": "在此主题的基础上，你仍然可以使用 <code>setOption</code> 覆盖或设置主题样式。",
+      "whatIsDesc3": "ECharts 官方提供 <code>default</code>、<code>infographic</code>、<code>shine</code>、<code>roma</code>、<code>macarons</code>、<code>vintage</code> 等主题，可供<a href=\"http://echarts.baidu.com/download-theme.html\" target=\"_blank\">下载</a>使用。",
+      "importExport": "导入、导出",
+      "importExportDesc": "为了便于二次修改，我们的主题构建工具支持导入、导出配置项，导出的 JSON 文件仅用于在本工具中导入使用，而不能直接作为主题在 ECharts 中注册。"
+    },
     "formatSelection": "选择下载格式",
     "formatSelectionMsg": "请选择要下载的主题文件格式：",
     "jsFormat": "JavaScript 文件",
     "jsonFormat": "JSON 文件",
     "jsUsageTitle": "JavaScript 主题文件使用方法",
+    "jsonUsageTitle": "JSON 主题文件使用方法",
     "jsUsageStep1": "将下载的 {filename} 文件保存到项目中",
+    "jsonUsageStep1": "将下载的 {filename} 文件保存到项目中",
     "jsUsageStep2": "在 HTML 中引入此文件：",
+    "jsonUsageStep2": "读取 JSON 文件并解析：",
     "jsUsageStep3": "创建图表时使用主题：",
+    "jsonUsageStep3": "注册主题：",
+    "jsonUsageStep4": "创建图表时使用主题：",
     "jsUsageTip": "💡 第二个参数是在 JS 文件中注册的主题名称。",
+    "jsonUsageTip": "💡 第二个参数是注册时使用的主题名称。",
     "downloadFailed": "下载失败，请重试",
     "exportSuccess": "配置导出成功！",
     "exportFailed": "导出失败，请重试",
