refine and simplify code & externalize echarts library

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -148,7 +148,7 @@
       "whatIs": "What is the Theme Builder?",
       "whatIsDesc1": "A \"theme\" is a style abstraction for ECharts charts, used to unify the style of multiple charts. Using the online theme builder, you can quickly and intuitively generate theme configuration files and use customized theme styles in ECharts.",
       "whatIsDesc2": "Based on this theme, you can still use <code>setOption</code> to override or set theme styles.",
-      "whatIsDesc3": "ECharts officially provides themes such as <code>default</code>, <code>infographic</code>, <code>shine</code>, <code>roma</code>, <code>macarons</code>, <code>vintage</code>, etc., which can be <a href=\"http://echarts.baidu.com/download-theme.html\" target=\"_blank\">downloaded</a> for use.",
+      "whatIsDesc3": "ECharts officially provides themes such as <code>default</code>, <code>infographic</code>, <code>shine</code>, <code>roma</code>, <code>macarons</code>, <code>vintage</code>, etc., which can be <a href=\"https://echarts.apache.org/download-theme.html\" target=\"_blank\">downloaded</a> for use.",
       "importExport": "Import and Export",
       "importExportDesc": "For convenient secondary modifications, our theme builder supports importing and exporting configuration items. The exported JSON file is only used for importing in this tool and cannot be directly registered as a theme in ECharts."
     },
@@ -158,8 +158,8 @@
     "jsonFormat": "JSON File",
     "jsUsageTitle": "JavaScript Theme File Usage",
     "jsonUsageTitle": "JSON Theme File Usage",
-    "jsUsageStep1": "Save the downloaded {filename} file to your project",
-    "jsonUsageStep1": "Save the downloaded {filename} file to your project",
+    "jsUsageStep1": "Save the downloaded __filename__ file to your project",
+    "jsonUsageStep1": "Save the downloaded __filename__ file to your project",
     "jsUsageStep2": "Include this file in your HTML:",
     "jsonUsageStep2": "Read and parse the JSON file:",
     "jsUsageStep3": "Use the theme when creating a chart:",
