--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -148,7 +148,7 @@
       "whatIs": "主题在线构建工具是什么？",
       "whatIsDesc1": "\"主题\"是 ECharts 图表的风格抽象，用于统一多个图表的风格样式。使用主题在线构建工具，可以快速直观地生成主题配置文件，并在 ECharts 中使用自定义的主题样式。",
       "whatIsDesc2": "在此主题的基础上，你仍然可以使用 <code>setOption</code> 覆盖或设置主题样式。",
-      "whatIsDesc3": "ECharts 官方提供 <code>default</code>、<code>infographic</code>、<code>shine</code>、<code>roma</code>、<code>macarons</code>、<code>vintage</code> 等主题，可供<a href=\"http://echarts.baidu.com/download-theme.html\" target=\"_blank\">下载</a>使用。",
+      "whatIsDesc3": "ECharts 官方提供 <code>default</code>、<code>infographic</code>、<code>shine</code>、<code>roma</code>、<code>macarons</code>、<code>vintage</code> 等主题，可供<a href=\"https://echarts.apache.org/download-theme.html\" target=\"_blank\">下载</a>使用。",
       "importExport": "导入、导出",
       "importExportDesc": "为了便于二次修改，我们的主题构建工具支持导入、导出配置项，导出的 JSON 文件仅用于在本工具中导入使用，而不能直接作为主题在 ECharts 中注册。"
     },
@@ -158,8 +158,8 @@
     "jsonFormat": "JSON 文件",
     "jsUsageTitle": "JavaScript 主题文件使用方法",
     "jsonUsageTitle": "JSON 主题文件使用方法",
-    "jsUsageStep1": "将下载的 {filename} 文件保存到项目中",
-    "jsonUsageStep1": "将下载的 {filename} 文件保存到项目中",
+    "jsUsageStep1": "将下载的 __filename__ 文件保存到项目中",
+    "jsonUsageStep1": "将下载的 __filename__ 文件保存到项目中",
     "jsUsageStep2": "在 HTML 中引入此文件：",
     "jsonUsageStep2": "读取 JSON 文件并解析：",
     "jsUsageStep3": "创建图表时使用主题：",
